@@ -32,5 +32,3 @@ else
 	archlinux-java set java-8-openjdk/jre
 fi
 export JAVA_HOME=$(readlink -f /usr/bin/java | sed "s:bin/java::")
-
-java -server -Xms5G -Xmx16G -XX:MaxPermSize=128M -jar /server/forge-1.12.2-14.23.5.2846-universal.jar
